# tx-kit-ext

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  pyproject.toml  requirements_lock.txt
.github/: copilot-instructions.md
.github/workflows/: pr-backporting-label.yml  pr-backporting-manual.yml
aspects/: BUILD.bazel  inspect.bzl  inspect_aspect.bzl
configs/: todo.MODULE.bazel
configs/builder/: run-wasm.sh
kit/: README.md
pkg/droid/: BUILD.bazel
pkg/droid/src/cpp/Droid/: Glue.cc  Glue.h  android_main.cc  droid_argv.h  droid_glue.cc  droid_log.h  redirect_stdout.h
pkg/droid/src/java/tx/: DroidActivity.java
rules/: BUILD.bazel  README.md  cc_common.bzl  droid_deps.bzl  embedded.bzl  exec_binary.bzl  filter_deps.bzl  log.bzl  multi_app.bzl  multi_common.bzl  multi_lib.bzl  run_wrapper_cmd.bzl  wasm_helper.bzl
rules/droid/: BUILD.bazel  template.AndroidManifest.xml
rules/droid/src/cpp/: droid_activity.h  droid_argv.h  droid_glue.cc  droid_log.h  redirect_stdout.cc
rules/droid/src/java/tx/: DroidActivity.java
runner/: ATTRS_DIFFERENCES.md  BUILD.bazel  README.md  defs.bzl  exec_binary.bzl  exec_tool.bzl  host_runner.bzl  host_wrapper.bzl  sh_wrapper.args  sh_wrapper.cmd  sh_wrapper.md  sh_wrapper.sh
runner/src/: main.py
runner/src/runner/: .gitignore  __init__.py  cmd.py  context.py  detect.py  droid.py  droid_logcat.py  find.py  log.py  platform.py  wasm.py
test/cc/: BUILD.bazel  cc_bin.cpp  cc_lib.cpp  cc_tst.cpp
test/cc-multi/: BUILD.bazel  cc_bin.cpp
test/cc-pure/: BUILD.bazel  bin.cc  lib.cc
test/data/: BUILD.bazel
test/droid/app/: BUILD.bazel
test/droid/app/src/: BUILD.bazel
test/droid/app/src/main/: AndroidManifest.xml
test/droid/app/src/main/cpp/: jni.cc  jni_dep.cc
test/droid/app/src/main/java/com/app/: BUILD.bazel  Jni.java
test/droid/app/src/main/java/com/app/cpp/: jni_dep.cc
test/droid/app2/: BUILD.bazel
test/droid/app2/src/: BUILD.bazel
test/droid/app2/src/main/: AndroidManifest.xml
test/droid/app2/src/main/cpp/: jni_dep.cc  jni_dep.h
test/droid/ndk_example/: .bazelrc  MODULE.bazel
test/droid/tutorial/: MODULE.bazel
test/droid/tutorial/src/main/: BUILD.bazel
test/droid/tutorial/src/main/java/com/example/bazel/: BUILD.bazel
test/filter/: BUILD.bazel
test/multi-app-platforms/: BUILD.bazel  main.cpp
toolchains/emscripten/: BUILD.bazel
tools/: BUILD.bazel  cleanup.sh  requirements.txt
tools/dev/: BUILD.bazel  default.dev.bazelrc  default.dev.lldbinit  default.user.bazelrc  default.user.lldbinit  init.py
tools/dev/.lldb/: init_bazel_target.py
tools/lldb/: BUILD.bazel  default.user.lldbinit  setup-user-lldbinit.py
tools/wasm/: BUILD.bazel  README.md  main.py  runner.py
typings/: README.md
typings/lldb/: __init__.pyi
