"""Bazel module for shared extensions, tools and rules."""

module(
    name = "tx-kit-ext",
    version = "0.0.0",
)

################################################################
# Dependencies that are used by rules and tools
################################################################

# Build rules dependencies
# Dep "apple_support" must be included before `rules_cc` https://github.com/bazelbuild/apple_support
# It makes `dsymutil -s <exe> && dwarfdump <obj|a>` paths relative,
#   for deterministic build and simplifing debug setup.
#   --features=oso_prefix_is_pwd seems doesn't works https://keith.github.io/xcode-man-pages/ld.1.html#oso_prefix
#   can be replaced w/ other flags, e.g. --copt=-ffile-compilation-dir=. --linkopt=-Wl,-oso_prefix,
bazel_dep(name = "apple_support", version = "2.2.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Override protobuf version to avoid Python 3.8-3.10 toolchain requirements
bazel_dep(name = "protobuf", version = "34.0-rc1")

# WASM build support
bazel_dep(name = "emsdk", version = "4.0.17")
# TODO: find the way for local emsdk toolchain via .bazelrc config/overrides (same as w/ make/cmake/ninja/pkg_config/etc)
# use_extension("@emsdk//bazel:extensions.bzl", "emsdk_extension").configure(
#   emsdk_dir = "/Users/nik/emsdk",
#   enable_override = True,
# )

# TODO: ?? Don't need it ?? # Configure emscripten deps extension to download and register toolchains
# emscripten_deps = use_extension("@emsdk//:emscripten_deps.bzl", "emscripten_deps")
# use_repo(emscripten_deps, "emscripten_bin_linux")
# use_repo(emscripten_deps, "emscripten_bin_linux_arm64")
# use_repo(emscripten_deps, "emscripten_bin_mac")
# use_repo(emscripten_deps, "emscripten_bin_mac_arm64")
# use_repo(emscripten_deps, "emscripten_bin_win")

# Register emscripten toolchains (workaround for building on Windows ARM64)
register_toolchains(
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_linux",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_linux_arm64",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_mac",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_mac_arm64",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_win",
    # Custom toolchain for Windows ARM64 (uses x86_64 binaries via emulation)
    "//toolchains/emscripten:cc-toolchain-wasm-win_arm64",
)

# TODO: # Configure emscripten cache
# emscripten_cache = use_extension("@emsdk//:emscripten_cache.bzl", "emscripten_cache")
# use_repo(emscripten_cache, "emscripten_cache")

# TODO: # Configure nodejs from rules_nodejs for hermetic testing
# bazel_dep(name = "rules_nodejs", version = "6.7.3", dev_dependency = True)
# node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
# node.toolchain(node_version = "20.18.0")
# use_repo(node, "nodejs")

# Configure Python for tools and build extensions
bazel_dep(name = "rules_python", version = "1.8.4")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
use_repo(python, "python_3_11", "python_3_11_host")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt", # created by compile_pip_requirements rule in BUILD.bazel
)
use_repo(pip, "pypi")
