"""Bazel module for shared extensions, tools and rules."""

module(
    name = "tx-kit-ext",
    version = "0.0.0",
)

################################################################
# Custom rules and tools dependencies
################################################################

# Build rules dependencies
# Dep "apple_support" must be included before `rules_cc` https://github.com/bazelbuild/apple_support
# It makes `dsymutil -s <exe> && dwarfdump <obj|a>` paths relative,
#   for deterministic build and simplifing debug setup.
#   --features=oso_prefix_is_pwd seems doesn't works https://keith.github.io/xcode-man-pages/ld.1.html#oso_prefix
#   can be replaced w/ other flags, e.g. --copt=-ffile-compilation-dir=. --linkopt=-Wl,-oso_prefix,
bazel_dep(name = "apple_support", version = "2.2.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Disabled protobuf override because rules_android already depends on good 33.4 (and 0.7.1 cannot have higher)
# bazel_dep(name = "protobuf", version = "34.0-rc1")  # Override protobuf version to avoid Python 3.8-3.10 toolchain requirements

# test dependencies
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

################################################################
# WASM / Emscripten build support
################################################################
bazel_dep(name = "emsdk", version = "4.0.17-tx.1")
# TODO: find the way for local emsdk toolchain via .bazelrc config/overrides (same as w/ make/cmake/ninja/pkg_config/etc)
# use_extension("@emsdk//bazel:extensions.bzl", "emsdk_extension").configure(
#   emsdk_dir = "/Users/nik/emsdk",
#   enable_override = True,
# )

# TODO: ?? Don't need it ?? # Configure emscripten deps extension to download and register toolchains
# emscripten_deps = use_extension("@emsdk//:emscripten_deps.bzl", "emscripten_deps")
# use_repo(emscripten_deps, "emscripten_bin_linux")
# use_repo(emscripten_deps, "emscripten_bin_linux_arm64")
# use_repo(emscripten_deps, "emscripten_bin_mac")
# use_repo(emscripten_deps, "emscripten_bin_mac_arm64")
# use_repo(emscripten_deps, "emscripten_bin_win")

# Register emscripten toolchains (workaround for building on Windows ARM64)
register_toolchains(
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_linux",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_linux_arm64",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_mac",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_mac_arm64",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_win",
    # Custom toolchain for Windows ARM64 (uses x86_64 binaries via emulation)
    "//toolchains/emscripten:cc-toolchain-wasm-win_arm64",
)

# TODO: # Configure emscripten cache
# emscripten_cache = use_extension("@emsdk//:emscripten_cache.bzl", "emscripten_cache")
# use_repo(emscripten_cache, "emscripten_cache")

# TODO: # Configure nodejs from rules_nodejs for hermetic testing
# bazel_dep(name = "rules_nodejs", version = "6.7.3", dev_dependency = True)
# node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
# node.toolchain(node_version = "20.18.0")
# use_repo(node, "nodejs")

################################################################
# Android build support
################################################################

# Android SDK configure
#   https://bazel.build/start/android-app
#   https://github.com/bazelbuild/examples/tree/main/android
bazel_dep(name = "rules_android", version = "0.7.1")
bazel_dep(name = "rules_java", version = "9.3.0")  # for JavaInfo used in multi_app

register_toolchains(
    "@rules_android//toolchains/android:android_default_toolchain",
    "@rules_android//toolchains/android_sdk:android_sdk_tools",
)

android_sdk_repository_extension = use_extension(
    "@rules_android//rules/android_sdk_repository:rule.bzl", 
    "android_sdk_repository_extension"
)
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

# Android NDK configure
#   https://bazel.build/docs/android-ndk
#   https://github.com/bazelbuild/rules_android_ndk/tree/main/examples/basic
bazel_dep(name = "rules_android_ndk", version = "0.1.3")

android_ndk_repository_extension = use_extension(
    "@rules_android_ndk//:extension.bzl", 
    "android_ndk_repository_extension"
)
use_repo(android_ndk_repository_extension, "androidndk")

register_toolchains("@androidndk//:all")

################################################################
# Python build support
################################################################

# Configure Python for tools and build extensions
bazel_dep(name = "rules_python", version = "1.8.4")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
use_repo(python, "python_3_11", "python_3_11_host")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt", # created by compile_pip_requirements rule in BUILD.bazel
)
use_repo(pip, "pypi")
