load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("//rules/build:exec_binary.bzl", "exec_binary")

py_library(
    name = "lib",
    srcs = glob(["src/runner/*.py"]),
    imports = ["src"],
    deps = [
        # https://github.com/bazel-contrib/rules_python/tree/main/python/runfiles
        "@rules_python//python/runfiles",
        # https://github.com/tartley/colorama
        "@pypi//colorama",
        # https://github.com/h2non/filetype.py
        "@pypi//filetype",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "bin",
    srcs = ["src/main.py"],
    main = "src/main.py",
    tags = ["manual"],
    deps = [":lib"],
    visibility = ["//visibility:private"],
)

# Wrapper that forces runner to be built for exec platform
# It fixes usage of runner on Windows when it's used as a tool (--run_under for WASM tests),
#   because otherwise it would be built for target platform (without .exe) and fails to run.
exec_binary(
    name = "runner",
    binary = ":bin",
    visibility = ["//visibility:public"],
)
