load("//rules/build:multi_binary.bzl", "multi_binary")
load("//rules/build:multi_library.bzl", "multi_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

multi_library(
    name = "lib",
    srcs = ["cc_lib.cpp"],
    hdrs = ["cc_lib.h"],
    visibility = ["//visibility:private"],
)

multi_binary(
    name = "bin",
    srcs = ["cc_bin.cpp"],
    deps = [":lib"],
)

cc_test(
    name = "tst",
    srcs = ["cc_tst.cpp"],
    deps = [
        ":lib",
        "@googletest//:gtest_main",
    ],
)

alias(
    name = "cc",
    actual = ":bin",
)
