load("//rules/build:multi_binary.bzl", "multi_binary", "multi_test")
load("//rules/build:multi_library.bzl", "multi_library")

multi_library(
    name = "lib",
    srcs = ["cc_lib.cpp"],
    hdrs = ["cc_lib.h"],
    visibility = ["//visibility:private"],
)

multi_binary(
    name = "bin",
    srcs = ["cc_bin.cpp"],
    deps = [":lib"],
)

multi_test(
    name = "tst",
    srcs = ["cc_tst.cpp"],
    deps = [
        ":lib",
        "@googletest//:gtest_main",
    ],
)

alias(
    name = "cc",
    actual = ":bin",
)
