load("//rules/build:multi_lib.bzl", "multi_lib")
load("//rules/build:multi_app.bzl", "multi_binary", "multi_test")

multi_lib(
    name = "lib",
    srcs = ["cc_lib.cpp"],
    hdrs = ["cc_lib.h"],
    visibility = ["//visibility:private"],
)

multi_binary(
    name = "bin",
    srcs = ["cc_bin.cpp"],
    deps = [":lib"],
)

multi_test(
    name = "tst",
    srcs = ["cc_tst.cpp"],
    deps = [
        ":lib",
        "@googletest//:gtest_main",
    ],
)

alias(
    name = "cc",
    actual = ":bin",
)
