load("@rules_android//rules:rules.bzl", "android_library")
load("//rules:filter_deps.bzl", "droid_top_manifest")

android_library(
    name = "derived",
    manifest = "DerivedAndroidManifest.xml",
    deps = [
        "//rules/droid:droid_glue",
    ],
)

droid_top_manifest(
    name = "top_manifest",
    deps = [
        ":derived",  # dependency with 2 manifests
        "//rules/droid:droid_native",  # dependency without manifests
    ],
)
