load("@tx-kit-ext//rules/build:multi_app.bzl", "multi_app")

# Test 1: Multiple platforms (host + wasm)
multi_app(
    name = "test-host-wasm",
    srcs = ["main.cpp"],
    platforms = ["host", "wasm"],
)

# Test 2: Single platform (host only)
multi_app(
    name = "test-host-only",
    srcs = ["main.cpp"],
    platforms = ["host"],
)

# Test 3: All platforms (default behavior)
multi_app(
    name = "test-all-platforms",
    srcs = ["main.cpp"],
    # platforms not specified - should default to all
)

# # Test 4: None platforms (must fail)
# multi_app(
#     name = "test-none-platforms",
#     srcs = ["main.cpp"],
#     deps = ["@tx-pkg-aux//src/pkg-boot"],
#     platforms = [],  # Should fail
# )

# # Test 5: Illegal platforms (must fail)
# multi_app(
#     name = "test-none-platforms",
#     srcs = ["main.cpp"],
#     deps = ["@tx-pkg-aux//src/pkg-boot"],
#     platforms = ["host", "invalid"],  # Should fail
# )
