load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "init",
    srcs = ["init.py"],
    data = [
        # template files as data dependencies
        "default.dev.bazelrc",
        "default.dev.lldbinit",
        "default.user.lldbinit",
    ],
    deps = [
        "@pypi//termcolor",
    ],
)
