module(name = "basic_example")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_android_ndk", version = "0.1.3")

# Android NDK build support
#   https://bazel.build/docs/android-ndk
#   https://github.com/bazelbuild/rules_android_ndk/tree/main/examples/basic
android_ndk_repository_extension = use_extension("@rules_android_ndk//:extension.bzl", "android_ndk_repository_extension")
use_repo(android_ndk_repository_extension, "androidndk")

register_toolchains("@androidndk//:all")

# Android build support
#   https://bazel.build/start/android-app
#   https://github.com/bazelbuild/examples/tree/main/android
bazel_dep(name = "rules_android", version = "0.7.1")

register_toolchains(
    "@rules_android//toolchains/android:android_default_toolchain",
    "@rules_android//toolchains/android_sdk:android_sdk_tools",
)

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")
