load("@rules_android//rules:rules.bzl", "android_binary", "android_library")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(
    default_visibility = ["//test/droid/app2:__subpackages__"],
)

android_binary(
    name = "app",
    manifest = "main/AndroidManifest.xml",
    deps = [
        ":jni_dep",
    ],
)

cc_library(
    name = "jni_dep",
    srcs = ["main/cpp/jni_dep.cc"],
    hdrs = ["main/cpp/jni_dep.h"],

    deps = [
        "@androidndk//:native_app_glue",
    ],
    linkopts = [
        "-llog",
        "-landroid",
        "-Wl,--undefined=ANativeActivity_onCreate",
    ],
)
